# dji-tello-object-detection-segmentation

./: IMPROVEMENTS.md  LICENSE  MIGRATION.md  QUICKSTART.md  README.md  config.yaml  install.sh  pyproject.toml  requirements.txt  setup.py  telloCV-masked-rcnn.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md
examples/: benchmark.py  object_follower.py  test_detector.py
tello_vision/: __init__.py  app.py  tello_controller.py  visualizer.py
tello_vision/detectors/: __init__.py  base_detector.py  detectron2_detector.py  yolo_detector.py
